<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <EditText
        android:id="@+id/editextPersonNameRegister"
        android:layout_width="352dp"
        android:layout_height="68dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/stringName"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEmailAddressRegister"
        android:layout_width="348dp"
        android:layout_height="67dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/stringEmail"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editextPersonNameRegister" />

    <EditText
        android:id="@+id/editTextPasswordRegister"
        android:layout_width="0dp"
        android:layout_height="67dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/stringPassword"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmailAddressRegister"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailAddressRegister"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddressRegister" />

    <Button
        android:id="@+id/buttonSubmitRegister"
        android:layout_width="352dp"
        android:layout_height="59dp"
        android:layout_marginTop="50dp"
        android:text="@string/stringSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRegister" />

    <Button
        android:id="@+id/buttonCancelRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/stringCancel"
        android:textColor="#0C0C0C"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@+id/buttonSubmitRegister"
        app:layout_constraintHorizontal_bias="0.993"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSubmitRegister" />
</androidx.constraintlayout.widget.ConstraintLayout>